--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,10 @@ jobs:
         steps:
             - checkout
             - run:
-                - bazel build //...
-                - ./bazel-bin/src/hello
-                - cp ./bazel-bin/src/hello /tmp/artifacts
+                name: Build
+                command: |
+                    bazel build //...
+                    ./bazel-bin/src/hello
+                    cp ./bazel-bin/src/hello /tmp/artifacts
             - store_artifacts:
                 path: /tmp/artifacts
